# LLM-on-Any

./: .gitignore  README.md  fastStart.py  models.json  models.sample.json  pyproject.toml  requirements.txt  run.py
scripts/: termux-setup.sh
src/llm_on_any.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/llm_on_mobile/: cli.py  config.py  downloader.py  history.py  models_registry.py  runner.py  transformers_runner.py
src/llm_on_mobile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
